refactor(core): modernize spigot to paper apis
- Migrate plugin metadata access from PluginDescriptionFile to PluginMeta via plugin.getPluginMeta()
- Replace deprecated setDisplayName and setLore with modern Kyori Adventure API (displayName and lore) using Component
- Add utility methods in Lang to convert strings and lists of strings into components using MiniMessage and LegacyComponentSerializer
- Replace XMaterial library usage with native org.bukkit.Material for pistons and generic items
- Update Metrics and FileUploader to avoid the deprecated URL constructor by using java.net.URI.create(URL).toURL()
- Replace deprecated new JsonParser().parse() call with the static JsonParser.parseString() method in Metrics
- Improve migration command in MainCommand to check and re-establish database connection if closed
- Ignore .agents/ folder in .gitignore
- Clean up unused imports (such as ChatColor, XMaterial)